# dataengineering

./: README.md  advacnedConcepts.py  loggingtestfile.py  pandapyodbc.py  practiceIntialReq.ipynb  preacticeFinhubApiCalls.py  pyproject.toml
sqlachyma/: __init__.py  __main__.py  sqlalchemyIndex.py
