[project]
name = "pandaspractice"
version = "0.1.0"
description = "practice pandas"
authors = [
    {name = "shanker0811",email = "gourishanker697@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "mysql-connector-python (>=9.7.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
